--- a/pom.xml
+++ b/pom.xml
@@ -224,5 +224,14 @@
     		<version>1.3.1</version>
     	</plugin>
     </plugins>
-   </build>
+
+           <resources>
+               <resource>
+                   <directory>src/main/java</directory>
+                   <includes>
+                       <include>**/*.xml</include>
+                   </includes>
+               </resource>
+           </resources>
+       </build>
 </project>
